# bugspotter-intelligence

./: .env.example  .env.test  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test_provider_direct.py
.github/workflows/: tests.yml
docker/ollama/: ollama-init.sh
docker/postgres/: init-db.sql
src/bugspotter_intelligence/: config.py  main.py
src/bugspotter_intelligence/api/: deps.py
src/bugspotter_intelligence/api/routes/: __init__.py  ask.py  bugs.py
src/bugspotter_intelligence/db/: __init__.py  bug_repository.py  database.py  migrations.py
src/bugspotter_intelligence/llm/: __init__.py  base.py  factory.py  ollama.py
src/bugspotter_intelligence/models/: __init__.py  requests.py  responses.py
src/bugspotter_intelligence/services/: __init__.py  bug_command_service.py  bug_query_service.py  embedding_service.py
src/bugspotter_intelligence/services/embeddings/: __init__.py  base.py  factory.py  local.py  openai_provider.py
src/bugspotter_intelligence/utils/: log_extractor.py
tests/: conftest.py
tests/llm/: __init__.py  test_factory.py  test_ollama_provider.py
tests/services/: conftest.py  test_bug_command_service.py  test_bug_query_service.py  test_embedding_service.py
tests/utils/: test_log_extractor.py
