[project]
name = "bugspotter-intelligence"
version = "0.1.0"
description = "RAG service for intelligent bug analysis"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.0.0",
    "dedupkit[local]>=0.1.2",
    "anthropic>=0.75.0",
    "httpx>=0.24.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.1.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "testcontainers>=3.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

